build/parser.output
Grammar

    0 $accept: program END

    1 program: blocks

    2 blocks: elements
    3       | eols elements
    4       | func_blocks elements
    5       | eols func_blocks elements

    6 func_blocks: func_blocks func_block
    7            | func_block

    8 func_block: types IDENTIFIER LEFT_PAREN args RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE eols
    9           | types IDENTIFIER LEFT_PAREN RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE eols
   10           | VOID IDENTIFIER LEFT_PAREN args RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE eols
   11           | VOID IDENTIFIER LEFT_PAREN RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE eols

   12 elements: elements element
   13         | element

   14 element: element_content eols
   15        | element_content END

   16 element_content: declaration
   17                | input_output
   18                | subst_calc
   19                | subst_calc_2
   20                | if_stmt
   21                | WHILE LEFT_PAREN expression RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE
   22                | for_stmt
   23                | BREAK
   24                | CONTINUE
   25                | RETURN expression
   26                | RETURN STRINGLITERAL
   27                | func_exe
   28                | SEMICOLON

   29 declaration: types identifiers
   30            | declaration_subst_calc

   31 declaration_subst_calc: types subst_calc

   32 input_output: INPUT identifiers
   33             | outputs

   34 outputs: outputs OUTPUT expression
   35        | outputs OUTPUT STRINGLITERAL
   36        | OUTPUT expression
   37        | OUTPUT STRINGLITERAL

   38 identifiers: identifiers COMMA IDENTIFIER
   39            | identifiers COMMA IDENTIFIER DOT DOUBLELITERAL
   40            | identifiers COMMA IDENTIFIER DOT IDENTIFIER
   41            | IDENTIFIER
   42            | IDENTIFIER DOT DOUBLELITERAL
   43            | IDENTIFIER DOT IDENTIFIER

   44 subst_calc: identifiers SUBST expression
   45           | identifiers SUBST STRINGLITERAL

   46 subst_calc_2: identifiers ADD_SUBST expression
   47             | identifiers SUBT_SUBST expression
   48             | identifiers MULT_SUBST expression
   49             | identifiers DIV_SUBST expression

   50 expression: expression PLUS expression
   51           | expression MINUS expression
   52           | expression MULT expression
   53           | expression DIV expression
   54           | expression EQUAL expression
   55           | expression NOT_EQUAL expression
   56           | expression MORE_EQUAL expression
   57           | expression LESS_EQUAL expression
   58           | expression MORE expression
   59           | expression LESS expression
   60           | expression AND expression
   61           | expression OR expression
   62           | monomial
   63           | MINUS expression
   64           | LEFT_PAREN expression RIGHT_PAREN

   65 monomial: DOUBLELITERAL
   66         | IDENTIFIER
   67         | IDENTIFIER DOT DOUBLELITERAL
   68         | IDENTIFIER DOT IDENTIFIER
   69         | func_exe

   70 if_stmt: IF LEFT_PAREN expression RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACKET
   71        | IF LEFT_PAREN expression RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE EOL ELSE EOL LEFT_BRACE EOL elements RIGHT_BRACKET
   72        | IF LEFT_PAREN expression RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE EOL else_if_stmts RIGHT_BRACKET
   73        | IF LEFT_PAREN expression RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE EOL else_if_stmts RIGHT_BRACE EOL ELSE EOL LEFT_BRACE EOL elements RIGHT_BRACKET

   74 else_if_stmts: else_if_stmts RIGHT_BRACE EOL else_if_stmt
   75              | else_if_stmt

   76 else_if_stmt: ELSE IF LEFT_PAREN expression RIGHT_PAREN EOL LEFT_BRACE EOL elements

   77 for_stmt: FOR LEFT_PAREN declaration_subst_calc COMMA expression COMMA subst_calc RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE
   78         | FOR LEFT_PAREN declaration_subst_calc COMMA expression COMMA subst_calc_2 RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE
   79         | FOR LEFT_PAREN subst_calc COMMA expression COMMA subst_calc RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE
   80         | FOR LEFT_PAREN subst_calc COMMA expression COMMA subst_calc_2 RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE
   81         | FOR LEFT_PAREN subst_calc_2 COMMA expression COMMA subst_calc RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE
   82         | FOR LEFT_PAREN subst_calc_2 COMMA expression COMMA subst_calc_2 RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE

   83 func_exe: IDENTIFIER LEFT_PAREN identifiers RIGHT_PAREN
   84         | IDENTIFIER LEFT_PAREN RIGHT_PAREN

   85 args: args COMMA types IDENTIFIER
   86     | types IDENTIFIER

   87 types: DOUBLE
   88      | STRING

   89 eols: eols EOL
   90     | EOL


Terminals, with rules where they appear

END (0) 0 15
error (256)
DOUBLELITERAL (258) 39 42 65 67
STRINGLITERAL (259) 26 35 37 45
IDENTIFIER (260) 8 9 10 11 38 39 40 41 42 43 66 67 68 83 84 85 86
EQUAL (261) 54
NOT_EQUAL (262) 55
MORE_EQUAL (263) 56
LESS_EQUAL (264) 57
MORE (265) 58
LESS (266) 59
SUBST (267) 44 45
PLUS (268) 50
MINUS (269) 51 63
MULT (270) 52
DIV (271) 53
AND (272) 60
OR (273) 61
ADD_SUBST (274) 46
SUBT_SUBST (275) 47
MULT_SUBST (276) 48
DIV_SUBST (277) 49
RETURN (278) 25 26
DOT (279) 39 40 42 43 67 68
COMMA (280) 38 39 40 77 78 79 80 81 82 85
INPUT (281) 32
OUTPUT (282) 34 35 36 37
IF (283) 70 71 72 73 76
ELSE (284) 71 73 76
FOR (285) 77 78 79 80 81 82
WHILE (286) 21
BREAK (287) 23
CONTINUE (288) 24
LEFT_PAREN (289) 8 9 10 11 21 64 70 71 72 73 76 77 78 79 80 81 82 83
    84
RIGHT_PAREN (290) 8 9 10 11 21 64 70 71 72 73 76 77 78 79 80 81 82
    83 84
LEFT_BRACE (291) 8 9 10 11 21 70 71 72 73 76 77 78 79 80 81 82
RIGHT_BRACE (292) 8 9 10 11 21 71 72 73 74 77 78 79 80 81 82
RIGHT_BRACKET (293) 70 71 72 73
DOUBLE (294) 87
STRING (295) 88
VOID (296) 10 11
SEMICOLON (297) 28
EOL (298) 8 9 10 11 21 70 71 72 73 74 76 77 78 79 80 81 82 89 90
UMINUS (299)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
blocks (47)
    on left: 2 3 4 5, on right: 1
func_blocks (48)
    on left: 6 7, on right: 4 5 6
func_block (49)
    on left: 8 9 10 11, on right: 6 7
elements (50)
    on left: 12 13, on right: 2 3 4 5 8 9 10 11 12 21 70 71 72 73 76
    77 78 79 80 81 82
element (51)
    on left: 14 15, on right: 12 13
element_content (52)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27 28, on right: 14 15
declaration (53)
    on left: 29 30, on right: 16
declaration_subst_calc (54)
    on left: 31, on right: 30 77 78
input_output (55)
    on left: 32 33, on right: 17
outputs (56)
    on left: 34 35 36 37, on right: 33 34 35
identifiers (57)
    on left: 38 39 40 41 42 43, on right: 29 32 38 39 40 44 45 46 47
    48 49 83
subst_calc (58)
    on left: 44 45, on right: 18 31 77 79 80 81
subst_calc_2 (59)
    on left: 46 47 48 49, on right: 19 78 80 81 82
expression (60)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64, on right:
    21 25 34 36 44 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
    63 64 70 71 72 73 76 77 78 79 80 81 82
monomial (61)
    on left: 65 66 67 68 69, on right: 62
if_stmt (62)
    on left: 70 71 72 73, on right: 20
else_if_stmts (63)
    on left: 74 75, on right: 72 73 74
else_if_stmt (64)
    on left: 76, on right: 74 75
for_stmt (65)
    on left: 77 78 79 80 81 82, on right: 22
func_exe (66)
    on left: 83 84, on right: 27 69
args (67)
    on left: 85 86, on right: 8 10 85
types (68)
    on left: 87 88, on right: 8 9 29 31 85 86
eols (69)
    on left: 89 90, on right: 3 5 8 9 10 11 14 89


State 0

    0 $accept: . program END

    IDENTIFIER  shift, and go to state 1
    RETURN      shift, and go to state 2
    INPUT       shift, and go to state 3
    OUTPUT      shift, and go to state 4
    IF          shift, and go to state 5
    FOR         shift, and go to state 6
    WHILE       shift, and go to state 7
    BREAK       shift, and go to state 8
    CONTINUE    shift, and go to state 9
    DOUBLE      shift, and go to state 10
    STRING      shift, and go to state 11
    VOID        shift, and go to state 12
    SEMICOLON   shift, and go to state 13
    EOL         shift, and go to state 14

    program                 go to state 15
    blocks                  go to state 16
    func_blocks             go to state 17
    func_block              go to state 18
    elements                go to state 19
    element                 go to state 20
    element_content         go to state 21
    declaration             go to state 22
    declaration_subst_calc  go to state 23
    input_output            go to state 24
    outputs                 go to state 25
    identifiers             go to state 26
    subst_calc              go to state 27
    subst_calc_2            go to state 28
    if_stmt                 go to state 29
    for_stmt                go to state 30
    func_exe                go to state 31
    types                   go to state 32
    eols                    go to state 33


State 1

   41 identifiers: IDENTIFIER .
   42            | IDENTIFIER . DOT DOUBLELITERAL
   43            | IDENTIFIER . DOT IDENTIFIER
   83 func_exe: IDENTIFIER . LEFT_PAREN identifiers RIGHT_PAREN
   84         | IDENTIFIER . LEFT_PAREN RIGHT_PAREN

    DOT         shift, and go to state 34
    LEFT_PAREN  shift, and go to state 35

    $default  reduce using rule 41 (identifiers)


State 2

   25 element_content: RETURN . expression
   26                | RETURN . STRINGLITERAL

    DOUBLELITERAL  shift, and go to state 36
    STRINGLITERAL  shift, and go to state 37
    IDENTIFIER     shift, and go to state 38
    MINUS          shift, and go to state 39
    LEFT_PAREN     shift, and go to state 40

    expression  go to state 41
    monomial    go to state 42
    func_exe    go to state 43


State 3

   32 input_output: INPUT . identifiers

    IDENTIFIER  shift, and go to state 44

    identifiers  go to state 45


State 4

   36 outputs: OUTPUT . expression
   37        | OUTPUT . STRINGLITERAL

    DOUBLELITERAL  shift, and go to state 36
    STRINGLITERAL  shift, and go to state 46
    IDENTIFIER     shift, and go to state 38
    MINUS          shift, and go to state 39
    LEFT_PAREN     shift, and go to state 40

    expression  go to state 47
    monomial    go to state 42
    func_exe    go to state 43


State 5

   70 if_stmt: IF . LEFT_PAREN expression RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACKET
   71        | IF . LEFT_PAREN expression RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE EOL ELSE EOL LEFT_BRACE EOL elements RIGHT_BRACKET
   72        | IF . LEFT_PAREN expression RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE EOL else_if_stmts RIGHT_BRACKET
   73        | IF . LEFT_PAREN expression RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE EOL else_if_stmts RIGHT_BRACE EOL ELSE EOL LEFT_BRACE EOL elements RIGHT_BRACKET

    LEFT_PAREN  shift, and go to state 48


State 6

   77 for_stmt: FOR . LEFT_PAREN declaration_subst_calc COMMA expression COMMA subst_calc RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE
   78         | FOR . LEFT_PAREN declaration_subst_calc COMMA expression COMMA subst_calc_2 RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE
   79         | FOR . LEFT_PAREN subst_calc COMMA expression COMMA subst_calc RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE
   80         | FOR . LEFT_PAREN subst_calc COMMA expression COMMA subst_calc_2 RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE
   81         | FOR . LEFT_PAREN subst_calc_2 COMMA expression COMMA subst_calc RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE
   82         | FOR . LEFT_PAREN subst_calc_2 COMMA expression COMMA subst_calc_2 RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE

    LEFT_PAREN  shift, and go to state 49


State 7

   21 element_content: WHILE . LEFT_PAREN expression RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE

    LEFT_PAREN  shift, and go to state 50


State 8

   23 element_content: BREAK .

    $default  reduce using rule 23 (element_content)


State 9

   24 element_content: CONTINUE .

    $default  reduce using rule 24 (element_content)


State 10

   87 types: DOUBLE .

    $default  reduce using rule 87 (types)


State 11

   88 types: STRING .

    $default  reduce using rule 88 (types)


State 12

   10 func_block: VOID . IDENTIFIER LEFT_PAREN args RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE eols
   11           | VOID . IDENTIFIER LEFT_PAREN RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE eols

    IDENTIFIER  shift, and go to state 51


State 13

   28 element_content: SEMICOLON .

    $default  reduce using rule 28 (element_content)


State 14

   90 eols: EOL .

    $default  reduce using rule 90 (eols)


State 15

    0 $accept: program . END

    END  shift, and go to state 52


State 16

    1 program: blocks .

    $default  reduce using rule 1 (program)


State 17

    4 blocks: func_blocks . elements
    6 func_blocks: func_blocks . func_block

    IDENTIFIER  shift, and go to state 1
    RETURN      shift, and go to state 2
    INPUT       shift, and go to state 3
    OUTPUT      shift, and go to state 4
    IF          shift, and go to state 5
    FOR         shift, and go to state 6
    WHILE       shift, and go to state 7
    BREAK       shift, and go to state 8
    CONTINUE    shift, and go to state 9
    DOUBLE      shift, and go to state 10
    STRING      shift, and go to state 11
    VOID        shift, and go to state 12
    SEMICOLON   shift, and go to state 13

    func_block              go to state 53
    elements                go to state 54
    element                 go to state 20
    element_content         go to state 21
    declaration             go to state 22
    declaration_subst_calc  go to state 23
    input_output            go to state 24
    outputs                 go to state 25
    identifiers             go to state 26
    subst_calc              go to state 27
    subst_calc_2            go to state 28
    if_stmt                 go to state 29
    for_stmt                go to state 30
    func_exe                go to state 31
    types                   go to state 32


State 18

    7 func_blocks: func_block .

    $default  reduce using rule 7 (func_blocks)


State 19

    2 blocks: elements .
   12 elements: elements . element

    IDENTIFIER  shift, and go to state 1
    RETURN      shift, and go to state 2
    INPUT       shift, and go to state 3
    OUTPUT      shift, and go to state 4
    IF          shift, and go to state 5
    FOR         shift, and go to state 6
    WHILE       shift, and go to state 7
    BREAK       shift, and go to state 8
    CONTINUE    shift, and go to state 9
    DOUBLE      shift, and go to state 10
    STRING      shift, and go to state 11
    SEMICOLON   shift, and go to state 13

    $default  reduce using rule 2 (blocks)

    element                 go to state 55
    element_content         go to state 21
    declaration             go to state 22
    declaration_subst_calc  go to state 23
    input_output            go to state 24
    outputs                 go to state 25
    identifiers             go to state 26
    subst_calc              go to state 27
    subst_calc_2            go to state 28
    if_stmt                 go to state 29
    for_stmt                go to state 30
    func_exe                go to state 31
    types                   go to state 56


State 20

   13 elements: element .

    $default  reduce using rule 13 (elements)


State 21

   14 element: element_content . eols
   15        | element_content . END

    END  shift, and go to state 57
    EOL  shift, and go to state 14

    eols  go to state 58


State 22

   16 element_content: declaration .

    $default  reduce using rule 16 (element_content)


State 23

   30 declaration: declaration_subst_calc .

    $default  reduce using rule 30 (declaration)


State 24

   17 element_content: input_output .

    $default  reduce using rule 17 (element_content)


State 25

   33 input_output: outputs .
   34 outputs: outputs . OUTPUT expression
   35        | outputs . OUTPUT STRINGLITERAL

    OUTPUT  shift, and go to state 59

    $default  reduce using rule 33 (input_output)


State 26

   38 identifiers: identifiers . COMMA IDENTIFIER
   39            | identifiers . COMMA IDENTIFIER DOT DOUBLELITERAL
   40            | identifiers . COMMA IDENTIFIER DOT IDENTIFIER
   44 subst_calc: identifiers . SUBST expression
   45           | identifiers . SUBST STRINGLITERAL
   46 subst_calc_2: identifiers . ADD_SUBST expression
   47             | identifiers . SUBT_SUBST expression
   48             | identifiers . MULT_SUBST expression
   49             | identifiers . DIV_SUBST expression

    SUBST       shift, and go to state 60
    ADD_SUBST   shift, and go to state 61
    SUBT_SUBST  shift, and go to state 62
    MULT_SUBST  shift, and go to state 63
    DIV_SUBST   shift, and go to state 64
    COMMA       shift, and go to state 65


State 27

   18 element_content: subst_calc .

    $default  reduce using rule 18 (element_content)


State 28

   19 element_content: subst_calc_2 .

    $default  reduce using rule 19 (element_content)


State 29

   20 element_content: if_stmt .

    $default  reduce using rule 20 (element_content)


State 30

   22 element_content: for_stmt .

    $default  reduce using rule 22 (element_content)


State 31

   27 element_content: func_exe .

    $default  reduce using rule 27 (element_content)


State 32

    8 func_block: types . IDENTIFIER LEFT_PAREN args RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE eols
    9           | types . IDENTIFIER LEFT_PAREN RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE eols
   29 declaration: types . identifiers
   31 declaration_subst_calc: types . subst_calc

    IDENTIFIER  shift, and go to state 66

    identifiers  go to state 67
    subst_calc   go to state 68


State 33

    3 blocks: eols . elements
    5       | eols . func_blocks elements
   89 eols: eols . EOL

    IDENTIFIER  shift, and go to state 1
    RETURN      shift, and go to state 2
    INPUT       shift, and go to state 3
    OUTPUT      shift, and go to state 4
    IF          shift, and go to state 5
    FOR         shift, and go to state 6
    WHILE       shift, and go to state 7
    BREAK       shift, and go to state 8
    CONTINUE    shift, and go to state 9
    DOUBLE      shift, and go to state 10
    STRING      shift, and go to state 11
    VOID        shift, and go to state 12
    SEMICOLON   shift, and go to state 13
    EOL         shift, and go to state 69

    func_blocks             go to state 70
    func_block              go to state 18
    elements                go to state 71
    element                 go to state 20
    element_content         go to state 21
    declaration             go to state 22
    declaration_subst_calc  go to state 23
    input_output            go to state 24
    outputs                 go to state 25
    identifiers             go to state 26
    subst_calc              go to state 27
    subst_calc_2            go to state 28
    if_stmt                 go to state 29
    for_stmt                go to state 30
    func_exe                go to state 31
    types                   go to state 32


State 34

   42 identifiers: IDENTIFIER DOT . DOUBLELITERAL
   43            | IDENTIFIER DOT . IDENTIFIER

    DOUBLELITERAL  shift, and go to state 72
    IDENTIFIER     shift, and go to state 73


State 35

   83 func_exe: IDENTIFIER LEFT_PAREN . identifiers RIGHT_PAREN
   84         | IDENTIFIER LEFT_PAREN . RIGHT_PAREN

    IDENTIFIER   shift, and go to state 44
    RIGHT_PAREN  shift, and go to state 74

    identifiers  go to state 75


State 36

   65 monomial: DOUBLELITERAL .

    $default  reduce using rule 65 (monomial)


State 37

   26 element_content: RETURN STRINGLITERAL .

    $default  reduce using rule 26 (element_content)


State 38

   66 monomial: IDENTIFIER .
   67         | IDENTIFIER . DOT DOUBLELITERAL
   68         | IDENTIFIER . DOT IDENTIFIER
   83 func_exe: IDENTIFIER . LEFT_PAREN identifiers RIGHT_PAREN
   84         | IDENTIFIER . LEFT_PAREN RIGHT_PAREN

    DOT         shift, and go to state 76
    LEFT_PAREN  shift, and go to state 35

    $default  reduce using rule 66 (monomial)


State 39

   63 expression: MINUS . expression

    DOUBLELITERAL  shift, and go to state 36
    IDENTIFIER     shift, and go to state 38
    MINUS          shift, and go to state 39
    LEFT_PAREN     shift, and go to state 40

    expression  go to state 77
    monomial    go to state 42
    func_exe    go to state 43


State 40

   64 expression: LEFT_PAREN . expression RIGHT_PAREN

    DOUBLELITERAL  shift, and go to state 36
    IDENTIFIER     shift, and go to state 38
    MINUS          shift, and go to state 39
    LEFT_PAREN     shift, and go to state 40

    expression  go to state 78
    monomial    go to state 42
    func_exe    go to state 43


State 41

   25 element_content: RETURN expression .
   50 expression: expression . PLUS expression
   51           | expression . MINUS expression
   52           | expression . MULT expression
   53           | expression . DIV expression
   54           | expression . EQUAL expression
   55           | expression . NOT_EQUAL expression
   56           | expression . MORE_EQUAL expression
   57           | expression . LESS_EQUAL expression
   58           | expression . MORE expression
   59           | expression . LESS expression
   60           | expression . AND expression
   61           | expression . OR expression

    EQUAL       shift, and go to state 79
    NOT_EQUAL   shift, and go to state 80
    MORE_EQUAL  shift, and go to state 81
    LESS_EQUAL  shift, and go to state 82
    MORE        shift, and go to state 83
    LESS        shift, and go to state 84
    PLUS        shift, and go to state 85
    MINUS       shift, and go to state 86
    MULT        shift, and go to state 87
    DIV         shift, and go to state 88
    AND         shift, and go to state 89
    OR          shift, and go to state 90

    $default  reduce using rule 25 (element_content)


State 42

   62 expression: monomial .

    $default  reduce using rule 62 (expression)


State 43

   69 monomial: func_exe .

    $default  reduce using rule 69 (monomial)


State 44

   41 identifiers: IDENTIFIER .
   42            | IDENTIFIER . DOT DOUBLELITERAL
   43            | IDENTIFIER . DOT IDENTIFIER

    DOT  shift, and go to state 34

    $default  reduce using rule 41 (identifiers)


State 45

   32 input_output: INPUT identifiers .
   38 identifiers: identifiers . COMMA IDENTIFIER
   39            | identifiers . COMMA IDENTIFIER DOT DOUBLELITERAL
   40            | identifiers . COMMA IDENTIFIER DOT IDENTIFIER

    COMMA  shift, and go to state 65

    $default  reduce using rule 32 (input_output)


State 46

   37 outputs: OUTPUT STRINGLITERAL .

    $default  reduce using rule 37 (outputs)


State 47

   36 outputs: OUTPUT expression .
   50 expression: expression . PLUS expression
   51           | expression . MINUS expression
   52           | expression . MULT expression
   53           | expression . DIV expression
   54           | expression . EQUAL expression
   55           | expression . NOT_EQUAL expression
   56           | expression . MORE_EQUAL expression
   57           | expression . LESS_EQUAL expression
   58           | expression . MORE expression
   59           | expression . LESS expression
   60           | expression . AND expression
   61           | expression . OR expression

    EQUAL       shift, and go to state 79
    NOT_EQUAL   shift, and go to state 80
    MORE_EQUAL  shift, and go to state 81
    LESS_EQUAL  shift, and go to state 82
    MORE        shift, and go to state 83
    LESS        shift, and go to state 84
    PLUS        shift, and go to state 85
    MINUS       shift, and go to state 86
    MULT        shift, and go to state 87
    DIV         shift, and go to state 88
    AND         shift, and go to state 89
    OR          shift, and go to state 90

    $default  reduce using rule 36 (outputs)


State 48

   70 if_stmt: IF LEFT_PAREN . expression RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACKET
   71        | IF LEFT_PAREN . expression RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE EOL ELSE EOL LEFT_BRACE EOL elements RIGHT_BRACKET
   72        | IF LEFT_PAREN . expression RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE EOL else_if_stmts RIGHT_BRACKET
   73        | IF LEFT_PAREN . expression RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE EOL else_if_stmts RIGHT_BRACE EOL ELSE EOL LEFT_BRACE EOL elements RIGHT_BRACKET

    DOUBLELITERAL  shift, and go to state 36
    IDENTIFIER     shift, and go to state 38
    MINUS          shift, and go to state 39
    LEFT_PAREN     shift, and go to state 40

    expression  go to state 91
    monomial    go to state 42
    func_exe    go to state 43


State 49

   77 for_stmt: FOR LEFT_PAREN . declaration_subst_calc COMMA expression COMMA subst_calc RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE
   78         | FOR LEFT_PAREN . declaration_subst_calc COMMA expression COMMA subst_calc_2 RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE
   79         | FOR LEFT_PAREN . subst_calc COMMA expression COMMA subst_calc RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE
   80         | FOR LEFT_PAREN . subst_calc COMMA expression COMMA subst_calc_2 RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE
   81         | FOR LEFT_PAREN . subst_calc_2 COMMA expression COMMA subst_calc RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE
   82         | FOR LEFT_PAREN . subst_calc_2 COMMA expression COMMA subst_calc_2 RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE

    IDENTIFIER  shift, and go to state 44
    DOUBLE      shift, and go to state 10
    STRING      shift, and go to state 11

    declaration_subst_calc  go to state 92
    identifiers             go to state 26
    subst_calc              go to state 93
    subst_calc_2            go to state 94
    types                   go to state 95


State 50

   21 element_content: WHILE LEFT_PAREN . expression RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE

    DOUBLELITERAL  shift, and go to state 36
    IDENTIFIER     shift, and go to state 38
    MINUS          shift, and go to state 39
    LEFT_PAREN     shift, and go to state 40

    expression  go to state 96
    monomial    go to state 42
    func_exe    go to state 43


State 51

   10 func_block: VOID IDENTIFIER . LEFT_PAREN args RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE eols
   11           | VOID IDENTIFIER . LEFT_PAREN RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE eols

    LEFT_PAREN  shift, and go to state 97


State 52

    0 $accept: program END .

    $default  accept


State 53

    6 func_blocks: func_blocks func_block .

    $default  reduce using rule 6 (func_blocks)


State 54

    4 blocks: func_blocks elements .
   12 elements: elements . element

    IDENTIFIER  shift, and go to state 1
    RETURN      shift, and go to state 2
    INPUT       shift, and go to state 3
    OUTPUT      shift, and go to state 4
    IF          shift, and go to state 5
    FOR         shift, and go to state 6
    WHILE       shift, and go to state 7
    BREAK       shift, and go to state 8
    CONTINUE    shift, and go to state 9
    DOUBLE      shift, and go to state 10
    STRING      shift, and go to state 11
    SEMICOLON   shift, and go to state 13

    $default  reduce using rule 4 (blocks)

    element                 go to state 55
    element_content         go to state 21
    declaration             go to state 22
    declaration_subst_calc  go to state 23
    input_output            go to state 24
    outputs                 go to state 25
    identifiers             go to state 26
    subst_calc              go to state 27
    subst_calc_2            go to state 28
    if_stmt                 go to state 29
    for_stmt                go to state 30
    func_exe                go to state 31
    types                   go to state 56


State 55

   12 elements: elements element .

    $default  reduce using rule 12 (elements)


State 56

   29 declaration: types . identifiers
   31 declaration_subst_calc: types . subst_calc

    IDENTIFIER  shift, and go to state 44

    identifiers  go to state 67
    subst_calc   go to state 68


State 57

   15 element: element_content END .

    $default  reduce using rule 15 (element)


State 58

   14 element: element_content eols .
   89 eols: eols . EOL

    EOL  shift, and go to state 69

    $default  reduce using rule 14 (element)


State 59

   34 outputs: outputs OUTPUT . expression
   35        | outputs OUTPUT . STRINGLITERAL

    DOUBLELITERAL  shift, and go to state 36
    STRINGLITERAL  shift, and go to state 98
    IDENTIFIER     shift, and go to state 38
    MINUS          shift, and go to state 39
    LEFT_PAREN     shift, and go to state 40

    expression  go to state 99
    monomial    go to state 42
    func_exe    go to state 43


State 60

   44 subst_calc: identifiers SUBST . expression
   45           | identifiers SUBST . STRINGLITERAL

    DOUBLELITERAL  shift, and go to state 36
    STRINGLITERAL  shift, and go to state 100
    IDENTIFIER     shift, and go to state 38
    MINUS          shift, and go to state 39
    LEFT_PAREN     shift, and go to state 40

    expression  go to state 101
    monomial    go to state 42
    func_exe    go to state 43


State 61

   46 subst_calc_2: identifiers ADD_SUBST . expression

    DOUBLELITERAL  shift, and go to state 36
    IDENTIFIER     shift, and go to state 38
    MINUS          shift, and go to state 39
    LEFT_PAREN     shift, and go to state 40

    expression  go to state 102
    monomial    go to state 42
    func_exe    go to state 43


State 62

   47 subst_calc_2: identifiers SUBT_SUBST . expression

    DOUBLELITERAL  shift, and go to state 36
    IDENTIFIER     shift, and go to state 38
    MINUS          shift, and go to state 39
    LEFT_PAREN     shift, and go to state 40

    expression  go to state 103
    monomial    go to state 42
    func_exe    go to state 43


State 63

   48 subst_calc_2: identifiers MULT_SUBST . expression

    DOUBLELITERAL  shift, and go to state 36
    IDENTIFIER     shift, and go to state 38
    MINUS          shift, and go to state 39
    LEFT_PAREN     shift, and go to state 40

    expression  go to state 104
    monomial    go to state 42
    func_exe    go to state 43


State 64

   49 subst_calc_2: identifiers DIV_SUBST . expression

    DOUBLELITERAL  shift, and go to state 36
    IDENTIFIER     shift, and go to state 38
    MINUS          shift, and go to state 39
    LEFT_PAREN     shift, and go to state 40

    expression  go to state 105
    monomial    go to state 42
    func_exe    go to state 43


State 65

   38 identifiers: identifiers COMMA . IDENTIFIER
   39            | identifiers COMMA . IDENTIFIER DOT DOUBLELITERAL
   40            | identifiers COMMA . IDENTIFIER DOT IDENTIFIER

    IDENTIFIER  shift, and go to state 106


State 66

    8 func_block: types IDENTIFIER . LEFT_PAREN args RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE eols
    9           | types IDENTIFIER . LEFT_PAREN RIGHT_PAREN EOL LEFT_BRACE EOL elements RIGHT_BRACE eols
   41 identifiers: IDENTIFIER .
   42            | IDENTIFIER . DOT DOUBLELITERAL
   43            | IDENTIFIER . DOT IDENTIFIER

    DOT         shift, and go to state 34
    LEFT_PAREN  shift, and go to state 107

    $default  reduce using rule 41 (identifiers)


State 67

   29 declaration: types identifiers .
   38 identifiers: identifiers . COMMA IDENTIFIER
   39            | identifiers . COMMA IDENTIFIER DOT DOUBLELITERAL
   40            | identifiers . COMMA IDENTIFIER DOT IDENTIFIER
   44 subst_calc: identifiers . SUBST expression
   45           | identifiers . SUBST STRINGLITERAL

    SUBST  shift, and go to state 60
    COMMA  shift, and go to state 65

    $default  reduce using rule 29 (declaration)


State 68

   31 declaration_subst_calc: types subst_calc .

    $default  reduce using rule 31 (declaration_subst_calc)


State 69

   89 eols: eols EOL .

    $default  reduce using rule 89 (eols)


State 70

    5 blocks: eols func_blocks . elements
    6 func_blocks: func_blocks . func_block
